--- a/app/src/main/res/layout/activity_personal_user_page.xml
+++ b/app/src/main/res/layout/activity_personal_user_page.xml
@@ -45,14 +45,16 @@
                         android:orientation="horizontal">
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
+                            android:layout_width="50dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="120dp"
                             android:orientation="vertical">
 
                             <TextView
+                                android:id="@+id/UserPageUserFollowNum"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:lines="1"
                                 android:text="0"
                                 android:textColor="@color/black"
                                 android:textSize="20sp"
@@ -68,14 +70,16 @@
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
+                            android:layout_width="50dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
                             android:orientation="vertical">
 
                             <TextView
+                                android:id="@+id/UserPageUserFanNum"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:lines="1"
                                 android:text="0"
                                 android:textColor="@color/black"
                                 android:textSize="20sp"
@@ -92,14 +96,12 @@
 
                         <TextView
                             android:id="@+id/PersonalUserPageEditInfoButton2"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_width="100dp"
+                            android:layout_height="40dp"
                             android:layout_marginHorizontal="20dp"
                             android:background="@drawable/activity_home_page_searchbutton_background"
                             android:backgroundTint="#F0F0F0"
                             android:gravity="center"
-                            android:paddingHorizontal="18dp"
-                            android:paddingVertical="5dp"
                             android:text="@string/activity_personal_user_page_edit"
                             android:textColor="@color/black"
                             android:textSize="16sp"
@@ -156,7 +158,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="10dp"
                         android:layout_marginTop="20dp"
-                        android:src="@drawable/activity_personal_user_page_divideline" />
+                        android:src="@drawable/activity_user_page_divideline" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -165,12 +167,12 @@
                         android:orientation="vertical">
 
                         <com.google.android.material.tabs.TabLayout
-                            android:id="@+id/activity_personal_user_page_userrelations_viewpage_tablayout"
+                            android:id="@+id/activity_user_page_user_relations_viewpage_tablayout"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
 
                         <androidx.viewpager2.widget.ViewPager2
-                            android:id="@+id/activity_personal_user_page_userrelations_viewpage"
+                            android:id="@+id/activity_user_page_user_relations_viewpage"
                             android:layout_width="match_parent"
                             android:layout_height="600dp" />
 
@@ -233,14 +235,12 @@
 
         <TextView
             android:id="@+id/PersonalUserPageEditInfoButton1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
             android:layout_marginHorizontal="20dp"
             android:background="@drawable/activity_home_page_searchbutton_background"
             android:backgroundTint="#F0F0F0"
-            android:paddingHorizontal="18dp"
-            android:paddingVertical="5dp"
+            android:gravity="center"
             android:text="@string/activity_personal_user_page_edit"
             android:textColor="@color/black"
             android:textSize="16sp"
