--- a/app/src/main/res/layout/activity_goods_publish_page.xml
+++ b/app/src/main/res/layout/activity_goods_publish_page.xml
@@ -37,6 +37,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/GoodsPublishPageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
@@ -65,6 +66,7 @@
         app:layout_constraintVertical_bias="0.0">
 
         <EditText
+            android:id="@+id/GoodsTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@null"
@@ -75,6 +77,7 @@
             android:textSize="16sp" />
 
         <EditText
+            android:id="@+id/GoodsInfo"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:background="@null"
@@ -108,6 +111,7 @@
             android:padding="10dp"
             android:text="添加图片" />
 
+        <!--        点开可以选择地址-->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -151,6 +155,7 @@
                 android:textColor="@color/text_main"
                 android:textSize="16sp" />
 
+            <!--            价格-->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -161,48 +166,6 @@
                 android:textColor="@color/colo_money"
                 android:textSize="16sp" />
         </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@color/color_link" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="5dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:src="@drawable/icon_same" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:padding="5dp"
-                android:text="同款宝贝"
-                android:textColor="@color/text_main"
-                android:textSize="16sp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:drawableEnd="@drawable/ic_right_24dp"
-                android:gravity="end|center_vertical"
-                android:padding="5dp"
-                android:text="关联同款后,将推荐想买的人"
-                android:textColor="@color/text_main1"
-                android:textSize="16sp" />
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@color/color_link" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -222,7 +185,7 @@
                 android:layout_marginStart="5dp"
                 android:gravity="center_vertical"
                 android:padding="5dp"
-                android:text="更多信息"
+                android:text="发货方式"
                 android:textColor="@color/text_main"
                 android:textSize="16sp"
                 app:drawableEndCompat="@drawable/ic_right_24dp" />
