发布商品页面的逻辑完善，包括商品的标题，描述以及价格的填写（初版）

--- a/app/src/main/res/layout/activity_goods_publish_page.xml
+++ b/app/src/main/res/layout/activity_goods_publish_page.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -149,14 +150,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-
                 android:padding="5dp"
                 android:text="价格"
                 android:textColor="@color/text_main"
                 android:textSize="16sp" />
 
-            <!--            价格-->
             <TextView
+                android:id="@+id/settingPrice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableEnd="@drawable/ic_right_24dp"
@@ -190,7 +190,9 @@
                 android:textSize="16sp"
                 app:drawableEndCompat="@drawable/ic_right_24dp" />
         </LinearLayout>
+
     </LinearLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
