商品发布页面新增添加发货地址功能

--- a/app/src/main/res/layout/activity_goods_publish_page.xml
+++ b/app/src/main/res/layout/activity_goods_publish_page.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -112,12 +111,13 @@
             android:padding="10dp"
             android:text="添加图片" />
 
-        <!--        点开可以选择地址-->
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/locationInfo"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="发货地: 天津 津南区" />
+            android:layout_marginTop="5dp"
+            android:paddingVertical="5dp"
+            android:text="发货地:" />
 
     </LinearLayout>
 
@@ -165,6 +165,7 @@
                 android:text="￥0.00"
                 android:textColor="@color/colo_money"
                 android:textSize="16sp" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -189,10 +190,9 @@
                 android:textColor="@color/text_main"
                 android:textSize="16sp"
                 app:drawableEndCompat="@drawable/ic_right_24dp" />
+
         </LinearLayout>
 
     </LinearLayout>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
